src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> body
Rule 1     body -> stmt
Rule 2     body -> body stmt
Rule 3     stmt -> set_stmt
Rule 4     stmt -> output_stmt
Rule 5     stmt -> if_then_stmt
Rule 6     stmt -> input_stmt
Rule 7     stmt -> while_stmt
Rule 8     stmt -> repeat_stmt
Rule 9     stmt -> pause_stmt
Rule 10    var_stmt -> SET ID
Rule 11    set_stmt -> var_stmt TO expr
Rule 12    output_stmt -> OUTPUT expr
Rule 13    if_then_stmt -> IF expr THEN body END
Rule 14    input_stmt -> ASK expr
Rule 15    while_stmt -> WHILE condition DO body END
Rule 16    repeat -> REPEAT expr TIMES USING expr
Rule 17    repeat_stmt -> repeat body END
Rule 18    pause_stmt -> PAUSE expr
Rule 19    expr -> binop
Rule 20    expr -> condition
Rule 21    binop -> expr PLUS expr
Rule 22    binop -> expr MINUS expr
Rule 23    binop -> expr MULTIPLY expr
Rule 24    binop -> expr DIVIDE expr
Rule 25    condition -> expr GT expr
Rule 26    condition -> expr LT expr
Rule 27    condition -> expr ET expr
Rule 28    condition -> expr GTE expr
Rule 29    condition -> expr LTE expr
Rule 30    condition -> expr NE expr
Rule 31    expr -> DIGIT
Rule 32    expr -> ID
Rule 33    expr -> LPAREN expr RPAREN
Rule 34    expr -> RANDOM NUMBER FROM expr TO expr
Rule 35    expr -> TEXT
Rule 36    expr -> CONVERT expr TO datatype
Rule 37    datatype -> NUM
Rule 38    datatype -> TXT

Terminals, with rules where they appear

ASK                  : 14
COMMENT              : 
CONVERT              : 36
DIGIT                : 31
DIVIDE               : 24
DO                   : 15
END                  : 13 15 17
ET                   : 27
FROM                 : 34
GT                   : 25
GTE                  : 28
ID                   : 10 32
IF                   : 13
LPAREN               : 33
LT                   : 26
LTE                  : 29
MINUS                : 22
MULTIPLY             : 23
NE                   : 30
NUM                  : 37
NUMBER               : 34
OUTPUT               : 12
PAUSE                : 18
PLUS                 : 21
RANDOM               : 34
REPEAT               : 16
RPAREN               : 33
SET                  : 10
TEXT                 : 35
THEN                 : 13
TIMES                : 16
TO                   : 11 34 36
TXT                  : 38
USING                : 16
WHILE                : 15
error                : 

Nonterminals, with rules where they appear

binop                : 19
body                 : 2 13 15 17 0
condition            : 15 20
datatype             : 36
expr                 : 11 12 13 14 16 16 18 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 33 34 34 36
if_then_stmt         : 5
input_stmt           : 6
output_stmt          : 4
pause_stmt           : 9
repeat               : 17
repeat_stmt          : 8
set_stmt             : 3
stmt                 : 1 2
var_stmt             : 11
while_stmt           : 7

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . stmt
    (2) body -> . body stmt
    (3) stmt -> . set_stmt
    (4) stmt -> . output_stmt
    (5) stmt -> . if_then_stmt
    (6) stmt -> . input_stmt
    (7) stmt -> . while_stmt
    (8) stmt -> . repeat_stmt
    (9) stmt -> . pause_stmt
    (11) set_stmt -> . var_stmt TO expr
    (12) output_stmt -> . OUTPUT expr
    (13) if_then_stmt -> . IF expr THEN body END
    (14) input_stmt -> . ASK expr
    (15) while_stmt -> . WHILE condition DO body END
    (17) repeat_stmt -> . repeat body END
    (18) pause_stmt -> . PAUSE expr
    (10) var_stmt -> . SET ID
    (16) repeat -> . REPEAT expr TIMES USING expr

    OUTPUT          shift and go to state 11
    IF              shift and go to state 12
    ASK             shift and go to state 13
    WHILE           shift and go to state 14
    PAUSE           shift and go to state 16
    SET             shift and go to state 17
    REPEAT          shift and go to state 18

    body                           shift and go to state 1
    stmt                           shift and go to state 2
    set_stmt                       shift and go to state 3
    output_stmt                    shift and go to state 4
    if_then_stmt                   shift and go to state 5
    input_stmt                     shift and go to state 6
    while_stmt                     shift and go to state 7
    repeat_stmt                    shift and go to state 8
    pause_stmt                     shift and go to state 9
    var_stmt                       shift and go to state 10
    repeat                         shift and go to state 15

state 1

    (0) S' -> body .
    (2) body -> body . stmt
    (3) stmt -> . set_stmt
    (4) stmt -> . output_stmt
    (5) stmt -> . if_then_stmt
    (6) stmt -> . input_stmt
    (7) stmt -> . while_stmt
    (8) stmt -> . repeat_stmt
    (9) stmt -> . pause_stmt
    (11) set_stmt -> . var_stmt TO expr
    (12) output_stmt -> . OUTPUT expr
    (13) if_then_stmt -> . IF expr THEN body END
    (14) input_stmt -> . ASK expr
    (15) while_stmt -> . WHILE condition DO body END
    (17) repeat_stmt -> . repeat body END
    (18) pause_stmt -> . PAUSE expr
    (10) var_stmt -> . SET ID
    (16) repeat -> . REPEAT expr TIMES USING expr

    OUTPUT          shift and go to state 11
    IF              shift and go to state 12
    ASK             shift and go to state 13
    WHILE           shift and go to state 14
    PAUSE           shift and go to state 16
    SET             shift and go to state 17
    REPEAT          shift and go to state 18

    stmt                           shift and go to state 19
    set_stmt                       shift and go to state 3
    output_stmt                    shift and go to state 4
    if_then_stmt                   shift and go to state 5
    input_stmt                     shift and go to state 6
    while_stmt                     shift and go to state 7
    repeat_stmt                    shift and go to state 8
    pause_stmt                     shift and go to state 9
    var_stmt                       shift and go to state 10
    repeat                         shift and go to state 15

state 2

    (1) body -> stmt .

    OUTPUT          reduce using rule 1 (body -> stmt .)
    IF              reduce using rule 1 (body -> stmt .)
    ASK             reduce using rule 1 (body -> stmt .)
    WHILE           reduce using rule 1 (body -> stmt .)
    PAUSE           reduce using rule 1 (body -> stmt .)
    SET             reduce using rule 1 (body -> stmt .)
    REPEAT          reduce using rule 1 (body -> stmt .)
    $end            reduce using rule 1 (body -> stmt .)
    END             reduce using rule 1 (body -> stmt .)


state 3

    (3) stmt -> set_stmt .

    OUTPUT          reduce using rule 3 (stmt -> set_stmt .)
    IF              reduce using rule 3 (stmt -> set_stmt .)
    ASK             reduce using rule 3 (stmt -> set_stmt .)
    WHILE           reduce using rule 3 (stmt -> set_stmt .)
    PAUSE           reduce using rule 3 (stmt -> set_stmt .)
    SET             reduce using rule 3 (stmt -> set_stmt .)
    REPEAT          reduce using rule 3 (stmt -> set_stmt .)
    $end            reduce using rule 3 (stmt -> set_stmt .)
    END             reduce using rule 3 (stmt -> set_stmt .)


state 4

    (4) stmt -> output_stmt .

    OUTPUT          reduce using rule 4 (stmt -> output_stmt .)
    IF              reduce using rule 4 (stmt -> output_stmt .)
    ASK             reduce using rule 4 (stmt -> output_stmt .)
    WHILE           reduce using rule 4 (stmt -> output_stmt .)
    PAUSE           reduce using rule 4 (stmt -> output_stmt .)
    SET             reduce using rule 4 (stmt -> output_stmt .)
    REPEAT          reduce using rule 4 (stmt -> output_stmt .)
    $end            reduce using rule 4 (stmt -> output_stmt .)
    END             reduce using rule 4 (stmt -> output_stmt .)


state 5

    (5) stmt -> if_then_stmt .

    OUTPUT          reduce using rule 5 (stmt -> if_then_stmt .)
    IF              reduce using rule 5 (stmt -> if_then_stmt .)
    ASK             reduce using rule 5 (stmt -> if_then_stmt .)
    WHILE           reduce using rule 5 (stmt -> if_then_stmt .)
    PAUSE           reduce using rule 5 (stmt -> if_then_stmt .)
    SET             reduce using rule 5 (stmt -> if_then_stmt .)
    REPEAT          reduce using rule 5 (stmt -> if_then_stmt .)
    $end            reduce using rule 5 (stmt -> if_then_stmt .)
    END             reduce using rule 5 (stmt -> if_then_stmt .)


state 6

    (6) stmt -> input_stmt .

    OUTPUT          reduce using rule 6 (stmt -> input_stmt .)
    IF              reduce using rule 6 (stmt -> input_stmt .)
    ASK             reduce using rule 6 (stmt -> input_stmt .)
    WHILE           reduce using rule 6 (stmt -> input_stmt .)
    PAUSE           reduce using rule 6 (stmt -> input_stmt .)
    SET             reduce using rule 6 (stmt -> input_stmt .)
    REPEAT          reduce using rule 6 (stmt -> input_stmt .)
    $end            reduce using rule 6 (stmt -> input_stmt .)
    END             reduce using rule 6 (stmt -> input_stmt .)


state 7

    (7) stmt -> while_stmt .

    OUTPUT          reduce using rule 7 (stmt -> while_stmt .)
    IF              reduce using rule 7 (stmt -> while_stmt .)
    ASK             reduce using rule 7 (stmt -> while_stmt .)
    WHILE           reduce using rule 7 (stmt -> while_stmt .)
    PAUSE           reduce using rule 7 (stmt -> while_stmt .)
    SET             reduce using rule 7 (stmt -> while_stmt .)
    REPEAT          reduce using rule 7 (stmt -> while_stmt .)
    $end            reduce using rule 7 (stmt -> while_stmt .)
    END             reduce using rule 7 (stmt -> while_stmt .)


state 8

    (8) stmt -> repeat_stmt .

    OUTPUT          reduce using rule 8 (stmt -> repeat_stmt .)
    IF              reduce using rule 8 (stmt -> repeat_stmt .)
    ASK             reduce using rule 8 (stmt -> repeat_stmt .)
    WHILE           reduce using rule 8 (stmt -> repeat_stmt .)
    PAUSE           reduce using rule 8 (stmt -> repeat_stmt .)
    SET             reduce using rule 8 (stmt -> repeat_stmt .)
    REPEAT          reduce using rule 8 (stmt -> repeat_stmt .)
    $end            reduce using rule 8 (stmt -> repeat_stmt .)
    END             reduce using rule 8 (stmt -> repeat_stmt .)


state 9

    (9) stmt -> pause_stmt .

    OUTPUT          reduce using rule 9 (stmt -> pause_stmt .)
    IF              reduce using rule 9 (stmt -> pause_stmt .)
    ASK             reduce using rule 9 (stmt -> pause_stmt .)
    WHILE           reduce using rule 9 (stmt -> pause_stmt .)
    PAUSE           reduce using rule 9 (stmt -> pause_stmt .)
    SET             reduce using rule 9 (stmt -> pause_stmt .)
    REPEAT          reduce using rule 9 (stmt -> pause_stmt .)
    $end            reduce using rule 9 (stmt -> pause_stmt .)
    END             reduce using rule 9 (stmt -> pause_stmt .)


state 10

    (11) set_stmt -> var_stmt . TO expr

    TO              shift and go to state 20


state 11

    (12) output_stmt -> OUTPUT . expr
    (19) expr -> . binop
    (20) expr -> . condition
    (31) expr -> . DIGIT
    (32) expr -> . ID
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . RANDOM NUMBER FROM expr TO expr
    (35) expr -> . TEXT
    (36) expr -> . CONVERT expr TO datatype
    (21) binop -> . expr PLUS expr
    (22) binop -> . expr MINUS expr
    (23) binop -> . expr MULTIPLY expr
    (24) binop -> . expr DIVIDE expr
    (25) condition -> . expr GT expr
    (26) condition -> . expr LT expr
    (27) condition -> . expr ET expr
    (28) condition -> . expr GTE expr
    (29) condition -> . expr LTE expr
    (30) condition -> . expr NE expr

    DIGIT           shift and go to state 24
    ID              shift and go to state 25
    LPAREN          shift and go to state 26
    RANDOM          shift and go to state 27
    TEXT            shift and go to state 28
    CONVERT         shift and go to state 29

    expr                           shift and go to state 21
    binop                          shift and go to state 22
    condition                      shift and go to state 23

state 12

    (13) if_then_stmt -> IF . expr THEN body END
    (19) expr -> . binop
    (20) expr -> . condition
    (31) expr -> . DIGIT
    (32) expr -> . ID
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . RANDOM NUMBER FROM expr TO expr
    (35) expr -> . TEXT
    (36) expr -> . CONVERT expr TO datatype
    (21) binop -> . expr PLUS expr
    (22) binop -> . expr MINUS expr
    (23) binop -> . expr MULTIPLY expr
    (24) binop -> . expr DIVIDE expr
    (25) condition -> . expr GT expr
    (26) condition -> . expr LT expr
    (27) condition -> . expr ET expr
    (28) condition -> . expr GTE expr
    (29) condition -> . expr LTE expr
    (30) condition -> . expr NE expr

    DIGIT           shift and go to state 24
    ID              shift and go to state 25
    LPAREN          shift and go to state 26
    RANDOM          shift and go to state 27
    TEXT            shift and go to state 28
    CONVERT         shift and go to state 29

    expr                           shift and go to state 30
    binop                          shift and go to state 22
    condition                      shift and go to state 23

state 13

    (14) input_stmt -> ASK . expr
    (19) expr -> . binop
    (20) expr -> . condition
    (31) expr -> . DIGIT
    (32) expr -> . ID
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . RANDOM NUMBER FROM expr TO expr
    (35) expr -> . TEXT
    (36) expr -> . CONVERT expr TO datatype
    (21) binop -> . expr PLUS expr
    (22) binop -> . expr MINUS expr
    (23) binop -> . expr MULTIPLY expr
    (24) binop -> . expr DIVIDE expr
    (25) condition -> . expr GT expr
    (26) condition -> . expr LT expr
    (27) condition -> . expr ET expr
    (28) condition -> . expr GTE expr
    (29) condition -> . expr LTE expr
    (30) condition -> . expr NE expr

    DIGIT           shift and go to state 24
    ID              shift and go to state 25
    LPAREN          shift and go to state 26
    RANDOM          shift and go to state 27
    TEXT            shift and go to state 28
    CONVERT         shift and go to state 29

    expr                           shift and go to state 31
    binop                          shift and go to state 22
    condition                      shift and go to state 23

state 14

    (15) while_stmt -> WHILE . condition DO body END
    (25) condition -> . expr GT expr
    (26) condition -> . expr LT expr
    (27) condition -> . expr ET expr
    (28) condition -> . expr GTE expr
    (29) condition -> . expr LTE expr
    (30) condition -> . expr NE expr
    (19) expr -> . binop
    (20) expr -> . condition
    (31) expr -> . DIGIT
    (32) expr -> . ID
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . RANDOM NUMBER FROM expr TO expr
    (35) expr -> . TEXT
    (36) expr -> . CONVERT expr TO datatype
    (21) binop -> . expr PLUS expr
    (22) binop -> . expr MINUS expr
    (23) binop -> . expr MULTIPLY expr
    (24) binop -> . expr DIVIDE expr

    DIGIT           shift and go to state 24
    ID              shift and go to state 25
    LPAREN          shift and go to state 26
    RANDOM          shift and go to state 27
    TEXT            shift and go to state 28
    CONVERT         shift and go to state 29

    condition                      shift and go to state 32
    expr                           shift and go to state 33
    binop                          shift and go to state 22

state 15

    (17) repeat_stmt -> repeat . body END
    (1) body -> . stmt
    (2) body -> . body stmt
    (3) stmt -> . set_stmt
    (4) stmt -> . output_stmt
    (5) stmt -> . if_then_stmt
    (6) stmt -> . input_stmt
    (7) stmt -> . while_stmt
    (8) stmt -> . repeat_stmt
    (9) stmt -> . pause_stmt
    (11) set_stmt -> . var_stmt TO expr
    (12) output_stmt -> . OUTPUT expr
    (13) if_then_stmt -> . IF expr THEN body END
    (14) input_stmt -> . ASK expr
    (15) while_stmt -> . WHILE condition DO body END
    (17) repeat_stmt -> . repeat body END
    (18) pause_stmt -> . PAUSE expr
    (10) var_stmt -> . SET ID
    (16) repeat -> . REPEAT expr TIMES USING expr

    OUTPUT          shift and go to state 11
    IF              shift and go to state 12
    ASK             shift and go to state 13
    WHILE           shift and go to state 14
    PAUSE           shift and go to state 16
    SET             shift and go to state 17
    REPEAT          shift and go to state 18

    repeat                         shift and go to state 15
    body                           shift and go to state 34
    stmt                           shift and go to state 2
    set_stmt                       shift and go to state 3
    output_stmt                    shift and go to state 4
    if_then_stmt                   shift and go to state 5
    input_stmt                     shift and go to state 6
    while_stmt                     shift and go to state 7
    repeat_stmt                    shift and go to state 8
    pause_stmt                     shift and go to state 9
    var_stmt                       shift and go to state 10

state 16

    (18) pause_stmt -> PAUSE . expr
    (19) expr -> . binop
    (20) expr -> . condition
    (31) expr -> . DIGIT
    (32) expr -> . ID
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . RANDOM NUMBER FROM expr TO expr
    (35) expr -> . TEXT
    (36) expr -> . CONVERT expr TO datatype
    (21) binop -> . expr PLUS expr
    (22) binop -> . expr MINUS expr
    (23) binop -> . expr MULTIPLY expr
    (24) binop -> . expr DIVIDE expr
    (25) condition -> . expr GT expr
    (26) condition -> . expr LT expr
    (27) condition -> . expr ET expr
    (28) condition -> . expr GTE expr
    (29) condition -> . expr LTE expr
    (30) condition -> . expr NE expr

    DIGIT           shift and go to state 24
    ID              shift and go to state 25
    LPAREN          shift and go to state 26
    RANDOM          shift and go to state 27
    TEXT            shift and go to state 28
    CONVERT         shift and go to state 29

    expr                           shift and go to state 35
    binop                          shift and go to state 22
    condition                      shift and go to state 23

state 17

    (10) var_stmt -> SET . ID

    ID              shift and go to state 36


state 18

    (16) repeat -> REPEAT . expr TIMES USING expr
    (19) expr -> . binop
    (20) expr -> . condition
    (31) expr -> . DIGIT
    (32) expr -> . ID
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . RANDOM NUMBER FROM expr TO expr
    (35) expr -> . TEXT
    (36) expr -> . CONVERT expr TO datatype
    (21) binop -> . expr PLUS expr
    (22) binop -> . expr MINUS expr
    (23) binop -> . expr MULTIPLY expr
    (24) binop -> . expr DIVIDE expr
    (25) condition -> . expr GT expr
    (26) condition -> . expr LT expr
    (27) condition -> . expr ET expr
    (28) condition -> . expr GTE expr
    (29) condition -> . expr LTE expr
    (30) condition -> . expr NE expr

    DIGIT           shift and go to state 24
    ID              shift and go to state 25
    LPAREN          shift and go to state 26
    RANDOM          shift and go to state 27
    TEXT            shift and go to state 28
    CONVERT         shift and go to state 29

    expr                           shift and go to state 37
    binop                          shift and go to state 22
    condition                      shift and go to state 23

state 19

    (2) body -> body stmt .

    OUTPUT          reduce using rule 2 (body -> body stmt .)
    IF              reduce using rule 2 (body -> body stmt .)
    ASK             reduce using rule 2 (body -> body stmt .)
    WHILE           reduce using rule 2 (body -> body stmt .)
    PAUSE           reduce using rule 2 (body -> body stmt .)
    SET             reduce using rule 2 (body -> body stmt .)
    REPEAT          reduce using rule 2 (body -> body stmt .)
    $end            reduce using rule 2 (body -> body stmt .)
    END             reduce using rule 2 (body -> body stmt .)


state 20

    (11) set_stmt -> var_stmt TO . expr
    (19) expr -> . binop
    (20) expr -> . condition
    (31) expr -> . DIGIT
    (32) expr -> . ID
    (33) expr -> . LPAREN expr RPAREN
    (34) expr -> . RANDOM NUMBER FROM expr TO expr
    (35) expr -> . TEXT
    (36) expr -> . CONVERT expr TO datatype
    (21) binop -> . expr PLUS expr
    (22) binop -> . expr MINUS expr
    (23) binop -> . expr MULTIPLY expr
    (24) binop -> . expr DIVIDE expr
    (25) condition -> . expr GT expr
    (26) condition -> . expr LT expr
    (27) condition -> . expr ET expr
    (28) condition -> . expr GTE expr
    (29) condition -> . expr LTE expr
    (30) condition -> . expr NE expr

    DIGIT           shift and go to state 24
    ID              shift and go to state 25
    LPAREN          shift and go to state 26
    RANDOM          shift and go to state 27
    TEXT            shift and go to state 28
    CONVERT         shift and go to state 29

    expr                           shift and go to state 38
    binop                          shift and go to state 22
    condition                      shift and go to state 23

state 21

    (12) output_stmt -> OUTPUT expr .
    (21) binop -> expr . PLUS expr
    (22) binop -> expr . MINUS expr
    (23) binop -> expr . MULTIPLY expr
    (24) binop -> expr . DIVIDE expr
    (25) condition -> expr . GT expr
    (26) condition -> expr . LT expr
    (27) condition -> expr . ET expr
    (28) condition -> expr . GTE expr
    (29) condition -> expr . LTE expr
    (30) condition -> expr . NE expr

    OUTPUT          reduce using rule 12 (output_stmt -> OUTPUT expr .)
    IF              reduce using rule 12 (output_stmt -> OUTPUT expr .)
    ASK             reduce using rule 12 (output_stmt -> OUTPUT expr .)
    WHILE           reduce using rule 12 (output_stmt -> OUTPUT expr .)
    PAUSE           reduce using rule 12 (output_stmt -> OUTPUT expr .)
    SET             reduce using rule 12 (output_stmt -> OUTPUT expr .)
    REPEAT          reduce using rule 12 (output_stmt -> OUTPUT expr .)
    $end            reduce using rule 12 (output_stmt -> OUTPUT expr .)
    END             reduce using rule 12 (output_stmt -> OUTPUT expr .)
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40
    MULTIPLY        shift and go to state 41
    DIVIDE          shift and go to state 42
    GT              shift and go to state 43
    LT              shift and go to state 44
    ET              shift and go to state 45
    GTE             shift and go to state 46
    LTE             shift and go to state 47
    NE              shift and go to state 48


state 22

    (19) expr -> binop .

    PLUS            reduce using rule 19 (expr -> binop .)
    MINUS           reduce using rule 19 (expr -> binop .)
    MULTIPLY        reduce using rule 19 (expr -> binop .)
    DIVIDE          reduce using rule 19 (expr -> binop .)
    GT              reduce using rule 19 (expr -> binop .)
    LT              reduce using rule 19 (expr -> binop .)
    ET              reduce using rule 19 (expr -> binop .)
    GTE             reduce using rule 19 (expr -> binop .)
    LTE             reduce using rule 19 (expr -> binop .)
    NE              reduce using rule 19 (expr -> binop .)
    OUTPUT          reduce using rule 19 (expr -> binop .)
    IF              reduce using rule 19 (expr -> binop .)
    ASK             reduce using rule 19 (expr -> binop .)
    WHILE           reduce using rule 19 (expr -> binop .)
    PAUSE           reduce using rule 19 (expr -> binop .)
    SET             reduce using rule 19 (expr -> binop .)
    REPEAT          reduce using rule 19 (expr -> binop .)
    $end            reduce using rule 19 (expr -> binop .)
    END             reduce using rule 19 (expr -> binop .)
    THEN            reduce using rule 19 (expr -> binop .)
    TIMES           reduce using rule 19 (expr -> binop .)
    RPAREN          reduce using rule 19 (expr -> binop .)
    TO              reduce using rule 19 (expr -> binop .)
    DO              reduce using rule 19 (expr -> binop .)


state 23

    (20) expr -> condition .

    PLUS            reduce using rule 20 (expr -> condition .)
    MINUS           reduce using rule 20 (expr -> condition .)
    MULTIPLY        reduce using rule 20 (expr -> condition .)
    DIVIDE          reduce using rule 20 (expr -> condition .)
    GT              reduce using rule 20 (expr -> condition .)
    LT              reduce using rule 20 (expr -> condition .)
    ET              reduce using rule 20 (expr -> condition .)
    GTE             reduce using rule 20 (expr -> condition .)
    LTE             reduce using rule 20 (expr -> condition .)
    NE              reduce using rule 20 (expr -> condition .)
    OUTPUT          reduce using rule 20 (expr -> condition .)
    IF              reduce using rule 20 (expr -> condition .)
    ASK             reduce using rule 20 (expr -> condition .)
    WHILE           reduce using rule 20 (expr -> condition .)
    PAUSE           reduce using rule 20 (expr -> condition .)
    SET             reduce using rule 20 (expr -> condition .)
    REPEAT          reduce using rule 20 (expr -> condition .)
    $end            reduce using rule 20 (expr -> condition .)
    END             reduce using rule 20 (expr -> condition .)
    THEN            reduce using rule 20 (expr -> condition .)
    TIMES           reduce using rule 20 (expr -> condition .)
    RPAREN          reduce using rule 20 (expr -> condition .)
    TO              reduce using rule 20 (expr -> condition .)
    DO              reduce using rule 20 (expr -> condition .)


state 24

    (31) expr -> DIGIT .

    PLUS            reduce using rule 31 (expr -> DIGIT .)
    MINUS           reduce using rule 31 (expr -> DIGIT .)
    MULTIPLY        reduce using rule 31 (expr -> DIGIT .)
    DIVIDE          reduce using rule 31 (expr -> DIGIT .)
